remove /me api
